<resources>
    <string name="app_name">WeatherTestApp</string>

    <string name="hint_your_city">Your city</string>
    <string name="sample_city_london">London</string>
    <string name="sample_date">Nov 1, Mon</string>
    <string name="sample_temperature">+12с</string>
    <string name="sample_temperature2">+12с / +9c</string>
    <string name="sample_weather_rain">Rain</string>
    <string name="select_city">Select city</string>
    <string name="show_weather">Show weather</string>
    <string name="lorem_ipsum">Lorem ipsum....</string>
    <string name="permission_denied">Permission denied</string>
    <string name="failed_retrieving_location">Failed on getting current location. Please try again</string>

    <string name="temps_celsius">
       %1$s \u2103 / %2$s \u2103
    </string>
    <string name="temp_selsius">
        %1$s \u2103
    </string>

    <string name="all_ok">OK</string>
    <string name="all_back">Back</string>
</resources>