<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent">

    <ImageView
        android:id="@+id/iv_back_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_back" />

    <TextView
        android:id="@+id/tv_back"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/all_12dp"
        android:text="@string/all_back"
        android:textColor="@color/white"
        android:textSize="@dimen/all_18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/iv_back_icon"
        app:layout_constraintEnd_toStartOf="@+id/tv_city"
        app:layout_constraintStart_toEndOf="@+id/iv_back_icon"
        app:layout_constraintTop_toTopOf="@+id/iv_back_icon" />

    <TextView
        android:id="@+id/tv_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/all_back"
        android:textColor="@color/white"
        android:textSize="@dimen/all_18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/tv_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_back"
        tools:text="@string/sample_city_london" />

    <TextView
        android:id="@+id/tv_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/all_8dp"
        android:text="@string/all_back"
        android:textColor="@color/white"
        android:textSize="@dimen/all_16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_city"
        tools:text="@string/sample_date" />


</androidx.constraintlayout.widget.ConstraintLayout>