<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="@dimen/all_16dp"
    android:layout_marginVertical="@dimen/all_8dp"
    app:cardCornerRadius="@dimen/all_20dp"
    app:cardElevation="@dimen/all_2dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tv_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="@dimen/all_16dp"
            android:layout_marginTop="@dimen/all_8dp"
            android:textColor="@color/black_50"
            android:textSize="@dimen/all_12sp"
            app:layout_constraintEnd_toStartOf="@+id/tv_temp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/sample_date" />

        <ImageView
            android:id="@+id/iv_weather_icon"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginTop="@dimen/all_8dp"
            android:layout_marginBottom="@dimen/all_8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="@+id/tv_date"
            app:layout_constraintTop_toBottomOf="@+id/tv_date"
            app:tint="@color/main"
            tools:srcCompat="@drawable/ic_rain" />

        <TextView
            android:id="@+id/tv_weather"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/all_8dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/iv_weather_icon"
            app:layout_constraintEnd_toStartOf="@+id/tv_temp"
            app:layout_constraintStart_toEndOf="@+id/iv_weather_icon"
            app:layout_constraintTop_toTopOf="@+id/iv_weather_icon"
            tools:text="@string/sample_weather_rain" />


        <TextView
            android:id="@+id/tv_temp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/all_16dp"
            android:textColor="@color/main"
            android:textSize="@dimen/all_16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="@string/sample_temperature2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</com.google.android.material.card.MaterialCardView>